Make all database queries safe This patch introduces the following changes for safety:
Database::unsafe_raw
Rename old query function to unsafe_raw. This should only be used when
dealing with queries that require no input parameters.

Database::query
The new query function takes in two additional parameters: types and
params. It's essentially just a wrapper around mysqli_stmt::bind_param.

Database::findOne
Same as Database::query but returns a single row. This function will
throw if the database returned more than one row.

Database::findMany
Same as Database::query but returns all rows.

For additional runtime type-safety all functions that make a database
requests will have a known type in the signature.

Furthermore, least portals code has been removed in order to reduce
the amount of code that has to be maintained.

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -83,7 +83,17 @@
     <div class="container">
         <ul>
             <?php
-                $data = Database::query("SELECT profile_number, IFNULL(boardname, steamname) as playername, title, admin FROM usersnew WHERE admin = 1 OR title = 'Developer' ORDER BY (title IS NOT NULL AND title LIKE 'Developer') DESC, playername ASC");
+                $data = Database::unsafe_raw(
+                    "SELECT profile_number
+                          , IFNULL(boardname, steamname) as playername
+                          , title, admin
+                     FROM usersnew
+                     WHERE admin = 1
+                     OR title = 'Developer'
+                     ORDER BY (title IS NOT NULL AND title LIKE 'Developer') DESC
+                            , playername ASC"
+                );
+
                 $teamMembers = array();
 
                 while ($row = $data->fetch_assoc()) {
