--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -168,8 +168,7 @@
     //     if (!isVisible) {
     //         //$dropDownContent.css("visibility", "visible");
     //         $dropDownContent.addClass("clicked");
-    //     }
-    //     else if ($dropDownContent.hasClass("clicked")) {
+    //     } else if ($dropDownContent.hasClass("clicked")) {
     //         $(this).parent().find(".nav_dropdown ul").css("visibility", "hidden");
     //         $dropDownContent.css("visibility", "hidden");
     //         $dropDownContent.removeClass("clicked");
