Update icons Adding alpha channel: convert aperture_noborder_gradient.png -fuzz 14% -transparent white aperture_noborder_gradient.png convert coop_noborder.jpg coop_noborder.png convert coop_noborder.png -fuzz 14% -transparent white coop_noborder.png convert coop_noborder_gradient.jpg coop_noborder_gradient.png convert coop_noborder_gradient.png -fuzz 14% -transparent white coop_noborder_gradient.png convert cube_noborder_gradient.jpg cube_noborder_gradient.png convert cube_noborder_gradient.png -fuzz 14% -transparent white cube_noborder_gradient.png convert cup_noborder.jpg cup_noborder.png convert cup_noborder.png -fuzz 14% -transparent white cup_noborder.png convert sp_noborder.jpg sp_noborder.png convert sp_noborder.png -fuzz 14% -transparent white sp_noborder.png convert sp_noborder_gradient.jpg sp_noborder_gradient.png convert sp_noborder_gradient.png -fuzz 14% -transparent white sp_noborder_gradient.png convert time_noborder_gradient.jpg time_noborder_gradient.png convert time_noborder_gradient.png -fuzz 14% -transparent white time_noborder_gradient.png

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -238,13 +238,13 @@ a:hover, a:focus {
     margin: 0px;
 }
 #sp_icon {
-    background: url("/images/sp_noborder_gradient.jpg");
+    background: url("/images/sp_noborder_gradient.png");
 }
 #coop_icon {
-    background: url("/images/coop_noborder_gradient.jpg");
+    background: url("/images/coop_noborder_gradient.png");
 }
 #cube_icon {
-    background: url("/images/cube_noborder_gradient.jpg");
+    background: url("/images/cube_noborder_gradient.png");
     background-size: 29px 29px;
 }
 #lp_icon {
@@ -255,7 +255,7 @@ a:hover, a:focus {
     background-size: 29px 29px;
 }
 #time_icon {
-    background: url("/images/time_noborder_gradient.jpg");
+    background: url("/images/time_noborder_gradient.png");
 }
 #loginsteam {
     display: block;
