--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -17,13 +17,13 @@
     <ul style="width:140px">
       <li>
           <a href="/aggregated/overall" style="height: 29px">
-            <div class="nav_icon" style="background: url('/images/cup_noborder.jpg'); background-size: 29px 29px;"></div>
+            <div class="nav_icon" style="background: url('/images/cup_noborder.png'); background-size: 29px 29px;"></div>
             <div class="btnLabel">Overall</div>
           </a>
       </li>
       <li class="nav_dropdown">
           <div style="height: 29px">
-              <div class="nav_icon" style="background: url('/images/sp_noborder.jpg'); background-size: 29px 29px;"></div>
+              <div class="nav_icon" style="background: url('/images/sp_noborder.png'); background-size: 29px 29px;"></div>
               <div class="btnLabel">Single Player</div>
           </div>
           <ul style="width:165px">
@@ -45,7 +45,7 @@
       </li>
       <li class="nav_dropdown">
           <div style="height: 29px">
-              <div class="nav_icon" style="background: url('/images/coop_noborder.jpg'); background-size: 29px 29px;"></div>
+              <div class="nav_icon" style="background: url('/images/coop_noborder.png'); background-size: 29px 29px;"></div>
               <div class="btnLabel">Cooperative</div>
           </div>
           <ul style="width:185px">
@@ -134,13 +134,13 @@
 <!--    <ul style="width:150px">-->
 <!--        <li>-->
 <!--            <a href="/lp/sp" style="height: 29px">-->
-<!--                <div class="nav_icon" style="background: url('/images/sp_noborder.jpg'); background-size: 29px 29px;"></div>-->
+<!--                <div class="nav_icon" style="background: url('/images/sp_noborder.png'); background-size: 29px 29px;"></div>-->
 <!--                <div class="label">Single Player</div>-->
 <!--            </a>-->
 <!--        </li>-->
 <!--        <li>-->
 <!--            <a href="/lp/coop" style="height: 29px">-->
-<!--                <div class="nav_icon" style="background: url('/images/coop_noborder.jpg'); background-size: 29px 29px;"></div>-->
+<!--                <div class="nav_icon" style="background: url('/images/coop_noborder.png'); background-size: 29px 29px;"></div>-->
 <!--                <div class="label">Cooperative</div>-->
 <!--            </a>-->
 <!--        </li>-->
