fix: submission form Firefox
Fixes #21

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1359,6 +1359,10 @@ html[class="dark"] #profile .userinformation .general-wrapper .banToggleButton:h
 #profile .changeForm .fileName {
     max-width: 183px;
 }
+#profile .submissionForm {
+    display: inline-block;
+    width: 100%;
+}
 #profile .submissionForm .fileName {
     max-width: 229px;
 }
