--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1039,15 +1039,15 @@
                 "<div class='scoreInputContainer' style='display:inline-block; width: 100%;'>" +
                     "<label for='score' style='float: left; color: inherit; margin-top: 3px;'>Time</label>" +
                     "<input type='text' id='score' name='score' value='' style='width: 65px;'>" +
-                "</div>" +
+                "</div><br/>" +
                 "<div class='setYoutubeContainer' style='display:inline-block; width: 100%;'>" +
                     "<label for='youtubeID' style='float: left; color: inherit; margin-top: 3px;'>Youtube URL</label>" +
                     "<input type='text' id='youtubeID' name='youtubeID' value='' style='width: 265px;'>" +
-                "</div>" +
+                "</div><br/>" +
                 "<div class='setCommentContainer'  style='display:inline-block; width: 100%;'>" +
                     "<label for='comment' style='float: left; color: inherit; margin-top: 3px;'>Comment</label>" +
                     "<input type='text' id='comment' name='comment' value='' style='width: 265px;'>" +
-                "</div>" +
+                "</div><br/>" +
                 "<div class='uploadDemoContainer'>" +
                     "<label class='button browseDemo'>" +
                         "<input type='file' name='demoFile' accept='.dem'/>" +
